<resources>
    <string name="app_name">EnjoyFinancial</string>
    <string name="please_input_phone">输入本人的手机号</string>
    <string name="please_input_sms_code">输入验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="agree">同意</string>
    <string name="please_input_verycode">请输入图形验证码</string>
    <string name="please_input_code">输入验证码</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="mine">我的</string>
    <string name="explode_recommend">爆款推荐</string>
    <string name="look_more"><![CDATA[查看更多>>]]></string>
    <string name="preferential_price">优惠价</string>
    <string name="cxf">畅享分</string>
    <string name="confirm">确定</string>
    <string name="setting_center">设置中心</string>
    <string name="person_data">个人资料</string>
    <string name="safe_center">安全中心</string>
    <string name="phone_verify">手机验证</string>
    <string name="identity_verify">身份验证</string>
    <string name="pay_pwd_verify">支付密码验证</string>
    <string name="default_address">默认地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="location_manager">地址管理</string>
    <string name="add_address">添加地址</string>
    <string name="my_order">我的订单</string>
    <string name="bank_card">银行卡</string>
    <string name="message_center">消息中心</string>
    <string name="usable_coupon">可用优惠券</string>
    <string name="coupon">优惠券</string>
    <string name="my_bill">我的账单</string>
    <string name="help_center">帮助中心</string>
    <string name="repayment_detail">还款详情</string>
</resources>
