<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_rectangle"
    android:paddingBottom="13dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="21dp"
        android:text="@string/please_input_verycode"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_verify_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@null"
        android:hint="@string/please_input_code"
        android:textColorHint="@color/font_gray_99"
        app:layout_constraintLeft_toLeftOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <View
        android:id="@+id/v_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="5dp"
        android:background="@color/orange_cf"
        app:layout_constraintLeft_toLeftOf="@+id/tv_title"
        app:layout_constraintRight_toLeftOf="@+id/iv_verify_code"
        app:layout_constraintTop_toBottomOf="@+id/et_verify_code" />

    <ImageView
        android:id="@+id/iv_verify_code"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@color/orange_cf"
        app:layout_constraintBottom_toBottomOf="@+id/et_verify_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_verify_code" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_orange_rectangle"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
        app:layout_constraintEnd_toStartOf="@+id/btn_submit"
        app:layout_constraintTop_toTopOf="@+id/btn_submit" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/shape_orange_rectangle"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_line" />

</android.support.constraint.ConstraintLayout>