<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <FrameLayout
        android:id="@+id/fl_title_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:src="@mipmap/arrows_left" />
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="66dp"
        android:src="@mipmap/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_title_container" />

    <ImageView
        android:id="@+id/iv_phone_icn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="125dp"
        android:src="@mipmap/cell_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/LoginInputStyle"
        android:hint="@string/please_input_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_phone_icn"
        app:layout_constraintLeft_toRightOf="@+id/iv_phone_icn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_phone_icn" />

    <View
        android:id="@+id/v_line_phone"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="9dp"
        android:background="@color/gray_b5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_phone_icn" />

    <ImageView
        android:id="@+id/iv_pwd_icn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:src="@mipmap/password"
        app:layout_constraintLeft_toLeftOf="@+id/iv_phone_icn"
        app:layout_constraintRight_toRightOf="@+id/iv_phone_icn"
        app:layout_constraintTop_toBottomOf="@+id/v_line_phone" />


    <EditText
        android:id="@+id/et_code"
        style="@style/LoginInputStyle"
        android:hint="@string/please_input_sms_code"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/iv_pwd_icn"
        app:layout_constraintLeft_toRightOf="@+id/iv_pwd_icn"
        app:layout_constraintRight_toLeftOf="@+id/btn_get_code"
        app:layout_constraintTop_toTopOf="@+id/iv_pwd_icn" />


    <Button
        android:id="@+id/btn_get_code"
        android:layout_width="79dp"
        android:layout_height="29dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/selector_btn_sms"
        android:text="@string/get_sms_code"
        android:textColor="@color/font_orange_cf"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/et_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_pwd_icn" />

    <View
        android:id="@+id/v_line_sms_code"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="9dp"
        android:background="@color/gray_b5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code" />

    <ImageView
        android:id="@+id/iv_is_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@mipmap/right"
        app:layout_constraintLeft_toLeftOf="@+id/iv_phone_icn"
        app:layout_constraintRight_toRightOf="@+id/iv_phone_icn"
        app:layout_constraintTop_toBottomOf="@+id/v_line_sms_code" />

    <LinearLayout
        android:id="@+id/ll_protocol_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/iv_is_agree"
        app:layout_constraintLeft_toRightOf="@+id/iv_is_agree"
        app:layout_constraintTop_toTopOf="@+id/iv_is_agree">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textColor="@color/font_gray_ce"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《某某某协议》"
            android:textColor="@color/font_orange_cf"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/NextBtnStyle"
        android:layout_marginTop="71dp"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_protocol_container" />

</android.support.constraint.ConstraintLayout>